sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:27: error: not found: value danslOdre
    if (!(danslOdre(4, 1+1))){
          ^