sort.dutchflag.DutchFlagAlgo.scala.code
def solve() = {
  def danslOrdre(x:Int, y:Int) = {

    if (getColor(x) == getColor(y)) {
      true;
    } 
    else{
      if (getColor(x) == "BLUE") {
        	true;
      } 
      else if (getColor(x) == "WHITE") {
        if (getColor(y) == "BLUE") {
          false;
        }else{
          true;
        }
          
      } else if (getColor(x) == "RED") {
      	false;
      }
    }

  }

  for (i <- 1 until getSize()) {
    if (!(danslOdre(4, 1+1))){
      swap(i, i+1);
    }
    
  }
  
  
}

